Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22650

Dirty compressed page checksum validation fails

    XMLWordPrintable

Details

    Description

      USE test;
      CREATE TABLE t (c int) ENGINE=InnoDB key_block_size= 4;
      SET GLOBAL innodb_buffer_pool_evict='uncompressed';
      SET GLOBAL innodb_checksum_algorithm=strict_none;
      SELECT SLEEP(10);  # Server crashes during sleep
      

      Leads to:

      10.5.3 cfe5ee90c8e4b9dfa98a41fcd299197a59261be7

      InnoDB: Failing assertion: page_zip_verify_checksum(frame, bpage->zip_size())
      

      10.5.3 cfe5ee90c8e4b9dfa98a41fcd299197a59261be7

      Core was generated by `/test/MD110520-mariadb-10.5.3-linux-x86_64-dbg/bin/mysqld --no-defaults --core-'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      [Current thread is 1 (Thread 0x14d160bff700 (LWP 1008144))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
      #1  0x000055618e9fec11 in my_write_core (sig=sig@entry=6) at /test/10.5_dbg/mysys/stacktrace.c:518
      #2  0x000055618e1a3f8d in handle_fatal_signal (sig=6) at /test/10.5_dbg/sql/signal_handler.cc:329
      #3  <signal handler called>
      #4  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:51
      #5  0x000014d17eafa801 in __GI_abort () at abort.c:79
      #6  0x000055618e7baaae in ut_dbg_assertion_failed (expr=expr@entry=0x55618ee9abc0 "page_zip_verify_checksum(frame, bpage->zip_size())", file=file@entry=0x55618ee9a538 "/test/10.5_dbg/storage/innobase/buf/buf0flu.cc", line=line@entry=1135) at /test/10.5_dbg/storage/innobase/ut/ut0dbg.cc:60
      #7  0x000055618e85177f in buf_flush_write_block_low (sync=false, flush_type=BUF_FLUSH_LIST, bpage=0x14d15d071318) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:1135
      #8  buf_flush_page (bpage=bpage@entry=0x14d15d071318, flush_type=flush_type@entry=BUF_FLUSH_LIST, sync=sync@entry=false) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:1325
      #9  0x000055618e852f8f in buf_flush_try_neighbors (n_to_flush=200, n_flushed=132, flush_type=BUF_FLUSH_LIST, page_id=...) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:1535
      #10 buf_flush_page_and_try_neighbors (bpage=bpage@entry=0x14d15d071318, flush_type=flush_type@entry=BUF_FLUSH_LIST, n_to_flush=n_to_flush@entry=200, count=count@entry=0x14d160bfe9d8) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:1598
      #11 0x000055618e8553c6 in buf_do_flush_list_batch (lsn_limit=18446744073709551615, min_n=200) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:1827
      #12 buf_flush_batch (flush_type=flush_type@entry=BUF_FLUSH_LIST, min_n=min_n@entry=200, lsn_limit=lsn_limit@entry=18446744073709551615, n=n@entry=0x14d160bfec10) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:1895
      #13 0x000055618e855964 in buf_flush_do_batch (type=type@entry=BUF_FLUSH_LIST, min_n=200, lsn_limit=lsn_limit@entry=18446744073709551615, n=n@entry=0x14d160bfec10) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:2018
      #14 0x000055618e855aca in buf_flush_lists (min_n=<optimized out>, lsn_limit=lsn_limit@entry=18446744073709551615, n_processed=n_processed@entry=0x14d160bfeca8) at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:2077
      #15 0x000055618e856466 in buf_flush_page_cleaner () at /test/10.5_dbg/storage/innobase/buf/buf0flu.cc:2996
      #16 0x000014d17f7dd6db in start_thread (arg=0x14d160bff700) at pthread_create.c:463
      #17 0x000014d17ebdb88f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.2.32 (dbg), 10.3.23 (dbg), 10.4.13 (dbg), 10.5.2 (dbg), 10.5.3 (dbg)

      Bug confirmed not present in:
      MariaDB: 10.1.45 (dbg), 10.1.45 (opt), 10.2.32 (opt), 10.3.23 (opt), 10.4.13 (opt), 10.5.2 (opt), 10.5.3 (opt), 10.5.4 (dbg), 10.5.4 (opt)
      MySQL: 5.5.62 (dbg), 5.5.62 (opt), 5.6.47 (dbg), 5.6.47 (opt), 5.7.29 (dbg), 5.7.29 (opt), 8.0.19 (dbg), 8.0.19 (opt)

      Apparently not in 10.5.4?

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.8h
                  3.8h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.